[package]
name = "obs-mute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obws = "0.10.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"], default-features=false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
